--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,33 @@
 .grid-container {
     display: grid;
     grid-template-columns: auto auto;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }  
 
 .tools-container {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
+}
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+    color: #ff6400;
+}
+p {
+    font-family: 'Roboto', sans-serif;
+    color: rgb(43, 42, 42);
+}
+
+.profile-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 20%;
+}
+
+.image-container {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
