--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: rgb(63, 62, 62);
+    background-color: rgb(173, 173, 173);
 }
 
 .grid-container {
@@ -9,11 +10,17 @@ body {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    grid-gap: 50px;
+    background-color: white;
+    padding: 0px 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }  
 
 .tools-container {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
+    margin-left: 25px;
 }
 
 .hobbies-container {
@@ -29,17 +36,34 @@ h2 {
     height: 150px;
     text-align: center;
     border-radius: 20%;
-    top: 80px;
+    top: 50px;
     position: relative;
 }
 
 .image-container {
-    max-width: 800px;
+    max-width: 830px;
     height: 250px;
     margin-left: auto;
     margin-right: auto;
     background-image: url("./images/fondo.jpg");
     background-position: center;
-    background-size: 800px 300px;
+    background-size: 830px 300px;
     text-align: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    }
+
+li {
+    margin: 15px 0px 15px 0px;
+}
+
+button {
+    font-family: 'Roboto', sans-serif;
+    color: rgb(63, 62, 62);
+    border-radius: 5px;
+    border-color: #ff6400;
+    padding: 8px;
+    font-size: 15px;
+    margin-top: 15px;
+    
 }
